# OBC-bootloader

./: README.md
binaries/entry_point_0x406000/blinky_0.2s_Delay/: Blinky.elf
binaries/entry_point_0x406000/lock_memory/: Blinky.elf
binaries/entry_point_0x503000/blinky_0.2s_Delay/: Blinky.elf
binaries/entry_point_0x503000/resest_boot_counter/: reset_counter.elf
blinky/src/: main.c
blinky_binaries/entry_point_0x400000/0.2s_Delay/: Blinky.elf
blinky_binaries/entry_point_0x400000/1s_Delay/: Blinky.elf
blinky_binaries/entry_point_0x406000/1s_Delay/: Blinky.elf
blinky_binaries/entry_point_0x506000/1s_Delay/: Blinky.elf
blinky_binaries/entry_point_0x603000/0.2s_Delay/: Blinky.elf
blinky_binaries/entry_point_0x603000/1s_Delay/: Blinky.elf
bootlib/: bootlib.c  bootlib.h
bootloader/: CMakeLists.txt  binary.sh  bootloader.c  bootloader.elf  bootloader.ld  main.c  makefile  memory_map.h  memory_map.ld  output.elf
bootloader/include/: CMakeLists.txt  bootloader.h  memory_map.h
bootloader/linker/: CMakeLists.txt  bootloader.ld  memory_map.ld
bootloader/src/: CMakeLists.txt  bootloader.c
linker script/: samv71q21b_flash.ld
linker scripts/: samv71q21b_flash0x406000.ld  samv71q21b_flash0x410000.ld  samv71q21b_flash0x503000.ld  samv71q21b_flash0x508000.ld
reset_counter_project/: CMakeLists.txt
reset_counter_project/include/: bootloader.h  memory_map.h
reset_counter_project/linker/: bootloader.ld
reset_counter_project/src/: bootloader.c
